--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "replace the comparing of null or undefined with isNil",
   "main": "lib",
   "scripts": {
-    "compile": "babel -V && babel src --out-dir lib"
+    "compile": "babel -V && babel src --out-dir lib",
+    "pretest": "npm run compile",
+    "test": "ava"
   },
   "repository": {
     "type": "git",
@@ -20,6 +22,8 @@
   },
   "homepage": "https://github.com/MaxMEllon/babel-plugin-existential-operator#readme",
   "devDependencies": {
+    "ava": "^0.14.0",
+    "ava-spec": "^1.0.0",
     "babel-cli": "^6.7.7",
     "babel-core": "^6.7.7",
     "babel-preset-es2015": "^6.6.0",
