--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "compile": "babel -V && babel src --out-dir lib",
     "pretest": "npm run compile",
-    "test": "ava"
+    "test": "xo src/*.js && ava"
   },
   "repository": {
     "type": "git",
@@ -15,6 +15,10 @@
   "keywords": [
     "babel-plugin"
   ],
+  "xo": {
+    "semicolon": false,
+    "space": 2
+  },
   "author": "MaxMEllon",
   "license": "MIT",
   "bugs": {
@@ -27,7 +31,8 @@
     "babel-cli": "^6.7.7",
     "babel-core": "^6.7.7",
     "babel-preset-es2015": "^6.6.0",
-    "babel-register": "^6.7.2"
+    "babel-register": "^6.7.2",
+    "xo": "^0.15.0"
   },
   "dependencies": {
     "flat": "^2.0.0"
