--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
   "homepage": "https://github.com/MaxMEllon/babel-plugin-existential-operator#readme",
   "devDependencies": {
     "ava": "^0.14.0",
-    "ava-spec": "^1.0.0",
-    "babel-cli": "^6.7.7",
-    "babel-core": "^6.7.7",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-register": "^6.7.2",
+    "ava-spec": "^1.0.1",
+    "babel-cli": "^6.11.4",
+    "babel-core": "^6.13.2",
+    "babel-preset-es2015": "^6.13.2",
+    "babel-register": "^6.11.6",
+    "flat": "^2.0.1",
+    "lodash.get": "^4.4.1",
     "xo": "^0.15.0"
   },
   "dependencies": {
