--- a/package.json
+++ b/package.json
@@ -30,5 +30,9 @@
     "ava": "^0.22.0",
     "babel-core": "^6.13.2",
     "xo": "^0.18.2"
+  },
+  "dependencies": {
+    "babel-template": "^6.26.0",
+    "babel-types": "^6.26.0"
   }
 }
